[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/hud/projectiles/stone.png" type="Texture" id=1]
[ext_resource path="res://ui/hud/projectiles/spear.png" type="Texture" id=2]
[ext_resource path="res://ui/hud/projectiles/fireball.png" type="Texture" id=3]
[ext_resource path="res://ui/hud/status_bars/projectile_inventory/projectile_inventory.gd" type="Script" id=4]

[node name="projectile_inventory" type="HBoxContainer"]
margin_left = 70.0
margin_right = 136.0
margin_bottom = 8.0
size_flags_horizontal = 3
custom_constants/separation = 10
alignment = 1
script = ExtResource( 4 )

[node name="stone_projectile" type="TextureRect" parent="."]
margin_left = 11.0
margin_right = 19.0
margin_bottom = 8.0
size_flags_vertical = 0
texture = ExtResource( 1 )

[node name="fireball_projectile" type="TextureRect" parent="."]
margin_left = 29.0
margin_right = 37.0
margin_bottom = 8.0
texture = ExtResource( 3 )

[node name="spear_projectile_player" type="TextureRect" parent="."]
margin_left = 47.0
margin_right = 55.0
margin_bottom = 8.0
size_flags_vertical = 0
texture = ExtResource( 2 )
